--- a/app_portifolio/templates/index.html
+++ b/app_portifolio/templates/index.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+
+    <i class="bi bi-list menu-mobile"></i>
+
     <aside id="header">
         <section class="profile">
             <img src="../static/img/perfil.jpg" alt="Foto DevMoura">
