--- a/app_portifolio/templates/index.html
+++ b/app_portifolio/templates/index.html
@@ -41,11 +41,11 @@
         <nav id="navbar" class="nav-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">
-                        <i class="bi bi-house"></i> Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="#inicio">
+                        <i class="bi bi-house" aria-hidden="true"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#sobre">
                         <i class="bi bi-person"></i> Sobre</a>
                 </li>
                 <li class="nav-item">
@@ -83,10 +83,80 @@
     align-items-end">
                 <div id="arraste" class="d-flex align-items-center">
                     <i class="bi bi-arrow-down text-white pe-2 fs-2" aria-hidden="true"></i>
-                    <a href="#">Araste para mais!</a>
+                    <a href="#sobre">Araste para mais!</a>
                 </div>
 
             </div>
+        </section>
+
+        <section id="sobre" class="container mt-5">
+
+            <div class="row w-100">
+                <div class="col-md-12">
+                    <h2 class="pt-3">Sobre</h2>
+                    <p>
+                        Formado em Ciências Contábeis, minha jornada tecnológica começou ao explorar o campo da
+                        programação. Essa curiosidade e paixão me abriram novas oportunidades e agora, atuo em
+                        infraestrutura e redes de computadores em um provedor de internet. Encorajado pelo potencial
+                        transformador da tecnologia, considero uma pós-graduação em Ciência de Dados para aprofundar
+                        meus conhecimentos. Acredito no crescimento contínuo, contribuindo com as pessoas e instituições
+                        das quais faço parte. Espero que meu portfólio evidencie minha paixão e a diferença que busco
+                        fazer na indústria da tecnologia.
+                    </p>
+                </div>
+            </div>
+
+            <div class="row mt-4">
+                <div class="col-md-4">
+                    <img class="img-fluid shadow" src="../static/img/perfil.jpg" alt="Foto do Thiago" data-anime="left">
+                </div>
+                <div class="col-md-8" data-anime="right">
+                    <h3>Desenvolvedor Full Stack </h3>
+                    <p>Atualmente, como freelancer, dedico-me ao desenvolvimento web fullstack. Trabalho principalmente
+                        com HTML, CSS e JavaScript no front-end e Python no back-end, utilizando bancos de dados SQL.
+                    </p>
+
+                    <div class="row mt-3 mb-3">
+                        <div class="col-md-6">
+                            <ul class="list-group list-group-flush fs-5">
+                                <li class="list-group-item">
+                                    Niver: <span class="fw-lighter">16 de Abril de
+                                        2000</span>
+                                </li>
+                                <li class="list-group-item">
+                                    Idade: <span class="fw-lighter">23 anos</span>
+                                </li>
+                                <li class="list-group-item">
+                                    Cidade: <span class="fw-lighter">Monte Castelo</span>
+                                </li>
+                                <li class="list-group-item">
+                                    Estado: <span class="fw-lighter">Santa Catarina</span>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul class="list-group list-group-flush fs-5">
+                                <li class="list-group-item">Hobby: <span class="fw-lighter">Freelancing </span></li>
+                                <li class="list-group-item">Site: <a href="https://dmsolucoesemti.com/" target="_blank"
+                                        class="fw-lighter text-decoration-none link-dark">dmsolucoesemti.com</a></li>
+                                <li class="list-group-item">Trabalho: <a href="https://blueedtech.com.br/"
+                                        target="_blank" class="fw-lighter text-decoration-none link-dark">Max
+                                        INternet</a></li>
+                                <li class="list-group-item">Experiência: <span class="fw-lighter"> +2
+                                        anos</span></li>
+
+                            </ul>
+                        </div>
+                    </div>
+
+                    <p>Além do meu trabalho freelance, busco compartilhar o que aprendi na minha jornada como
+                        desenvolvedor. Regularmente, compartilho conteúdo e dicas gratuitas sobre programação e
+                        carreira, visando tornar o campo do desenvolvimento web cada vez mais acessível para todos!</p>
+
+                </div>
+            </div>
+
         </section>
 
     </main>
