--- a/app_portifolio/static/style.css
+++ b/app_portifolio/static/style.css
@@ -196,7 +196,6 @@ i.menu-mobile{
     background-color: #252c90;
   }
   
-  section#sobre {
-    transition: all ease-in-out 0.5s;
-
+  .section-bg{
+    background-color: #eff5ff;
   }
