--- a/app_portifolio/templates/index.html
+++ b/app_portifolio/templates/index.html
@@ -49,19 +49,19 @@
                         <i class="bi bi-person"></i> Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#habilidades">
                         <i class="bi bi-list-check"></i> Habilidades</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#curriculo">
                         <i class="bi bi-file-earmark"></i> Currículo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#portifolio">
                         <i class="bi bi-collection"></i> Portifóio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="#contato">
                         <i class="bi bi-envelope"></i> Contato</a>
                 </li>
             </ul>
@@ -158,6 +158,139 @@
             </div>
 
         </section>
+
+        <section class="mt-5 section-bg" id="habilidades">
+
+            <div class="container pb-5">
+                <h2 class='pt-5'>Habilidades</h2>
+                <p>Em todo tempo como profissional de tecnologia eu adquiri algumas habilidades técnicas e não técnicas,
+                    a maioria delas estão aqui, de acordo com a porcentagem de conhecimento que eu acredito ter em cada
+                    uma delas.</p>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class='mt-3 mb-0'>HTML</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">95%</div>
+                        </div>
+                        <p class="mt-3 mb-0">CSS</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 85%;"
+                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+                        <p class="mt-3 mb-0">JavaScript</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Python</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Java</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Git</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 98%;"
+                                aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">98%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Deploy</p>
+                        <div class="progress mb-3">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="mt-3 mb-0">Angular</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                        <p class="mt-3 mb-0">ReactJs</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                        <p class="mt-3 mb-0">NodeJs (Express)</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 85%;"
+                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Flask</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Spring</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                        <p class="mt-3 mb-0">SQL</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 90%;"
+                                aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                        </div>
+                        <p class="mt-3 mb-0">NoSQL</p>
+                        <div class="progress mb-3">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 75%;"
+                                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                        </div>
+                    </div>
+                </div>
+
+                <hr class='w-50 me-auto ms-auto'>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="mt-3 mb-0">Trabalho em equipe</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 95%;"
+                                aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%</div>
+                        </div>
+
+                        <p class="mt-3 mb-0">Proatividade</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 98%;"
+                                aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">98%</div>
+                        </div>
+
+                        <p class="mt-3 mb-0">Orientação a detalhes</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 85%;"
+                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="mt-3 mb-0">Comunicação</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 95%;"
+                                aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%</div>
+                        </div>
+
+                        <p class="mt-3 mb-0">Empatia</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 85%;"
+                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+
+                        <p class="mt-3 mb-0">Comprometimento</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 98%;"
+                                aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">98%</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
 
     </main>
 
