--- a/app_portifolio/templates/index.html
+++ b/app_portifolio/templates/index.html
@@ -92,7 +92,7 @@
         <section id="sobre" class="container mt-5">
 
             <div class="row w-100">
-                <div class="col-md-12">
+                <div class="col-md-12" data-anime="down">
                     <h2 class="pt-3">Sobre</h2>
                     <p>
                         Formado em Ciências Contábeis, minha jornada tecnológica começou ao explorar o campo da
